fix: add wrap to order form fieldset

--- a/src/components/OrderForm/OrderForm.css
+++ b/src/components/OrderForm/OrderForm.css
@@ -29,15 +29,20 @@
 }
 
 .order-form__fieldset {
-  padding: 32px 16px 64px;
   border: 1px solid #e1e1e1;
   background-color: #f6f6f6;
   position: relative;
+  padding: 0;
+  margin: 0 0 64px;
+  flex-grow: 1;
+}
+
+.order-form__appliances-wrap{
   display: grid;
+  padding: 32px 16px 64px;
   gap: 32px 10px;
   grid-template-columns: repeat(auto-fit, 160px);
   justify-content: space-around;
-  margin-bottom: 64px;
   flex-grow: 1;
 }
 
@@ -161,13 +166,17 @@
     line-height: 27px;
     margin: 27px 0 54px;
   }
+
   .order-form__fieldset {
+    margin-bottom: 54px;
+  }
+
+  .order-form__appliances-wrap{
     padding: 27px 14px 54px;
     gap: 27px 5px;
     grid-template-columns: repeat(auto-fit, 140px);
-    margin-bottom: 54px;
-    flex-grow: 1;
   }
+
   .order-form__legend {
     font-size: 22px;
     line-height: 27px;
@@ -205,11 +214,12 @@
     margin: 26px 0 52px;
   }
   .order-form__fieldset {
+    margin-bottom: 52px;
+  }
+  .order-form__appliances-wrap{
     padding: 26px 13px 52px;
     gap: 26px 5px;
     grid-template-columns: repeat(auto-fit, 130px);
-    margin-bottom: 54px;
-    flex-grow: 1;
   }
   .order-form__legend {
     line-height: 26px;
@@ -233,11 +243,12 @@
     margin: 20px 0 40px;
   }
   .order-form__fieldset {
+    margin-bottom: 40px;
+  }
+  .order-form__appliances-wrap{
     padding: 20px 10px 40px;
     gap: 20px 4px;
     grid-template-columns: repeat(auto-fit, 100px);
-    margin-bottom: 40px;
-    flex-grow: 1;
   }
   .order-form__legend {
     font-size: 18px;
